--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,18 @@
 version: "3.5"
 
 services:
-  postgres:
-    image: postgres
+  db:
+    image: postgres:16.1-alpine
     environment:
-      POSTGRES_USER: robin
-      POSTGRES_PASSWORD: R0bin!
-      POSTGRES_DB: kip
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
       PGDATA: /data/postgres
     volumes:
       - postgres:/data/postgres
     ports:
       - 8080:8080
-      - 5432:5432
+      - ${POSTGRES_PORT}:${POSTGRES_PORT}
     restart: unless-stopped
 
 volumes:
